# FeedforwardNeuralNetwork

./: README.md
Feedforward NeuralNetwork/: CMakeLists.txt  main.cpp  network.cpp  network.h  neuron.cpp  neuron.h  testData.txt  training_set.cpp
Feedforward_NeuralNetwork/: CMakeLists.txt  main.cpp  network.cpp  network.h  neuron.cpp  training_set.h
Feedforward_NeuralNetwork/includes/: network.h  neuron.h  training_set.h
Feedforward_NeuralNetwork/source/: main.cpp  network.cpp  neuron.cpp  training_set.cpp
